@@ -45,6 +45,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - msissymbol now returns a GEN (gen_0/gen_1) instead of a long
   -  V=galoisfixedfield(P,,2): return V[1] in the same variable as the
      coeffs of V[3] instead of P.
+  - numtoperm now returns a t_VECSMALL (so that results can be
+    multiplied as permutations, etc.), no longer a ZV
 
 * Specific to the PARI library:
 ===============================
