@@ -4,33 +4,49 @@
  357423, -32670, 1925, -66]
 [1, 1023, 28501, 145750, 246730, 179487, 63987, 11880, 1155, 55]
 [1, 2047, 86526, 611501, 1379400, 1323652, 627396, 159027, 22275, 1705, 66]
-[[1, 2, 3, 4, 5], [1, 2, 3, 5, 4], [1, 2, 4, 3, 5], [1, 2, 4, 5, 3], [1, 2, 
-5, 3, 4], [1, 2, 5, 4, 3], [1, 3, 2, 4, 5], [1, 3, 2, 5, 4], [1, 3, 4, 2, 5]
-, [1, 3, 4, 5, 2], [1, 3, 5, 2, 4], [1, 3, 5, 4, 2], [1, 4, 2, 3, 5], [1, 4,
- 2, 5, 3], [1, 4, 3, 2, 5], [1, 4, 3, 5, 2], [1, 4, 5, 2, 3], [1, 4, 5, 3, 2
-], [1, 5, 2, 3, 4], [1, 5, 2, 4, 3], [1, 5, 3, 2, 4], [1, 5, 3, 4, 2], [1, 5
-, 4, 2, 3], [1, 5, 4, 3, 2], [2, 1, 3, 4, 5], [2, 1, 3, 5, 4], [2, 1, 4, 3, 
-5], [2, 1, 4, 5, 3], [2, 1, 5, 3, 4], [2, 1, 5, 4, 3], [2, 3, 1, 4, 5], [2, 
-3, 1, 5, 4], [2, 3, 4, 1, 5], [2, 3, 4, 5, 1], [2, 3, 5, 1, 4], [2, 3, 5, 4,
- 1], [2, 4, 1, 3, 5], [2, 4, 1, 5, 3], [2, 4, 3, 1, 5], [2, 4, 3, 5, 1], [2,
- 4, 5, 1, 3], [2, 4, 5, 3, 1], [2, 5, 1, 3, 4], [2, 5, 1, 4, 3], [2, 5, 3, 1
-, 4], [2, 5, 3, 4, 1], [2, 5, 4, 1, 3], [2, 5, 4, 3, 1], [3, 1, 2, 4, 5], [3
-, 1, 2, 5, 4], [3, 1, 4, 2, 5], [3, 1, 4, 5, 2], [3, 1, 5, 2, 4], [3, 1, 5, 
-4, 2], [3, 2, 1, 4, 5], [3, 2, 1, 5, 4], [3, 2, 4, 1, 5], [3, 2, 4, 5, 1], [
-3, 2, 5, 1, 4], [3, 2, 5, 4, 1], [3, 4, 1, 2, 5], [3, 4, 1, 5, 2], [3, 4, 2,
- 1, 5], [3, 4, 2, 5, 1], [3, 4, 5, 1, 2], [3, 4, 5, 2, 1], [3, 5, 1, 2, 4], 
-[3, 5, 1, 4, 2], [3, 5, 2, 1, 4], [3, 5, 2, 4, 1], [3, 5, 4, 1, 2], [3, 5, 4
-, 2, 1], [4, 1, 2, 3, 5], [4, 1, 2, 5, 3], [4, 1, 3, 2, 5], [4, 1, 3, 5, 2],
- [4, 1, 5, 2, 3], [4, 1, 5, 3, 2], [4, 2, 1, 3, 5], [4, 2, 1, 5, 3], [4, 2, 
-3, 1, 5], [4, 2, 3, 5, 1], [4, 2, 5, 1, 3], [4, 2, 5, 3, 1], [4, 3, 1, 2, 5]
-, [4, 3, 1, 5, 2], [4, 3, 2, 1, 5], [4, 3, 2, 5, 1], [4, 3, 5, 1, 2], [4, 3,
- 5, 2, 1], [4, 5, 1, 2, 3], [4, 5, 1, 3, 2], [4, 5, 2, 1, 3], [4, 5, 2, 3, 1
-], [4, 5, 3, 1, 2], [4, 5, 3, 2, 1], [5, 1, 2, 3, 4], [5, 1, 2, 4, 3], [5, 1
-, 3, 2, 4], [5, 1, 3, 4, 2], [5, 1, 4, 2, 3], [5, 1, 4, 3, 2], [5, 2, 1, 3, 
-4], [5, 2, 1, 4, 3], [5, 2, 3, 1, 4], [5, 2, 3, 4, 1], [5, 2, 4, 1, 3], [5, 
-2, 4, 3, 1], [5, 3, 1, 2, 4], [5, 3, 1, 4, 2], [5, 3, 2, 1, 4], [5, 3, 2, 4,
- 1], [5, 3, 4, 1, 2], [5, 3, 4, 2, 1], [5, 4, 1, 2, 3], [5, 4, 1, 3, 2], [5,
- 4, 2, 1, 3], [5, 4, 2, 3, 1], [5, 4, 3, 1, 2], [5, 4, 3, 2, 1]]
+[Vecsmall([1, 2, 3, 4, 5]), Vecsmall([1, 2, 3, 5, 4]), Vecsmall([1, 2, 4, 3,
+ 5]), Vecsmall([1, 2, 4, 5, 3]), Vecsmall([1, 2, 5, 3, 4]), Vecsmall([1, 2, 
+5, 4, 3]), Vecsmall([1, 3, 2, 4, 5]), Vecsmall([1, 3, 2, 5, 4]), Vecsmall([1
+, 3, 4, 2, 5]), Vecsmall([1, 3, 4, 5, 2]), Vecsmall([1, 3, 5, 2, 4]), Vecsma
+ll([1, 3, 5, 4, 2]), Vecsmall([1, 4, 2, 3, 5]), Vecsmall([1, 4, 2, 5, 3]), V
+ecsmall([1, 4, 3, 2, 5]), Vecsmall([1, 4, 3, 5, 2]), Vecsmall([1, 4, 5, 2, 3
+]), Vecsmall([1, 4, 5, 3, 2]), Vecsmall([1, 5, 2, 3, 4]), Vecsmall([1, 5, 2,
+ 4, 3]), Vecsmall([1, 5, 3, 2, 4]), Vecsmall([1, 5, 3, 4, 2]), Vecsmall([1, 
+5, 4, 2, 3]), Vecsmall([1, 5, 4, 3, 2]), Vecsmall([2, 1, 3, 4, 5]), Vecsmall
+([2, 1, 3, 5, 4]), Vecsmall([2, 1, 4, 3, 5]), Vecsmall([2, 1, 4, 5, 3]), Vec
+small([2, 1, 5, 3, 4]), Vecsmall([2, 1, 5, 4, 3]), Vecsmall([2, 3, 1, 4, 5])
+, Vecsmall([2, 3, 1, 5, 4]), Vecsmall([2, 3, 4, 1, 5]), Vecsmall([2, 3, 4, 5
+, 1]), Vecsmall([2, 3, 5, 1, 4]), Vecsmall([2, 3, 5, 4, 1]), Vecsmall([2, 4,
+ 1, 3, 5]), Vecsmall([2, 4, 1, 5, 3]), Vecsmall([2, 4, 3, 1, 5]), Vecsmall([
+2, 4, 3, 5, 1]), Vecsmall([2, 4, 5, 1, 3]), Vecsmall([2, 4, 5, 3, 1]), Vecsm
+all([2, 5, 1, 3, 4]), Vecsmall([2, 5, 1, 4, 3]), Vecsmall([2, 5, 3, 1, 4]), 
+Vecsmall([2, 5, 3, 4, 1]), Vecsmall([2, 5, 4, 1, 3]), Vecsmall([2, 5, 4, 3, 
+1]), Vecsmall([3, 1, 2, 4, 5]), Vecsmall([3, 1, 2, 5, 4]), Vecsmall([3, 1, 4
+, 2, 5]), Vecsmall([3, 1, 4, 5, 2]), Vecsmall([3, 1, 5, 2, 4]), Vecsmall([3,
+ 1, 5, 4, 2]), Vecsmall([3, 2, 1, 4, 5]), Vecsmall([3, 2, 1, 5, 4]), Vecsmal
+l([3, 2, 4, 1, 5]), Vecsmall([3, 2, 4, 5, 1]), Vecsmall([3, 2, 5, 1, 4]), Ve
+csmall([3, 2, 5, 4, 1]), Vecsmall([3, 4, 1, 2, 5]), Vecsmall([3, 4, 1, 5, 2]
+), Vecsmall([3, 4, 2, 1, 5]), Vecsmall([3, 4, 2, 5, 1]), Vecsmall([3, 4, 5, 
+1, 2]), Vecsmall([3, 4, 5, 2, 1]), Vecsmall([3, 5, 1, 2, 4]), Vecsmall([3, 5
+, 1, 4, 2]), Vecsmall([3, 5, 2, 1, 4]), Vecsmall([3, 5, 2, 4, 1]), Vecsmall(
+[3, 5, 4, 1, 2]), Vecsmall([3, 5, 4, 2, 1]), Vecsmall([4, 1, 2, 3, 5]), Vecs
+mall([4, 1, 2, 5, 3]), Vecsmall([4, 1, 3, 2, 5]), Vecsmall([4, 1, 3, 5, 2]),
+ Vecsmall([4, 1, 5, 2, 3]), Vecsmall([4, 1, 5, 3, 2]), Vecsmall([4, 2, 1, 3,
+ 5]), Vecsmall([4, 2, 1, 5, 3]), Vecsmall([4, 2, 3, 1, 5]), Vecsmall([4, 2, 
+3, 5, 1]), Vecsmall([4, 2, 5, 1, 3]), Vecsmall([4, 2, 5, 3, 1]), Vecsmall([4
+, 3, 1, 2, 5]), Vecsmall([4, 3, 1, 5, 2]), Vecsmall([4, 3, 2, 1, 5]), Vecsma
+ll([4, 3, 2, 5, 1]), Vecsmall([4, 3, 5, 1, 2]), Vecsmall([4, 3, 5, 2, 1]), V
+ecsmall([4, 5, 1, 2, 3]), Vecsmall([4, 5, 1, 3, 2]), Vecsmall([4, 5, 2, 1, 3
+]), Vecsmall([4, 5, 2, 3, 1]), Vecsmall([4, 5, 3, 1, 2]), Vecsmall([4, 5, 3,
+ 2, 1]), Vecsmall([5, 1, 2, 3, 4]), Vecsmall([5, 1, 2, 4, 3]), Vecsmall([5, 
+1, 3, 2, 4]), Vecsmall([5, 1, 3, 4, 2]), Vecsmall([5, 1, 4, 2, 3]), Vecsmall
+([5, 1, 4, 3, 2]), Vecsmall([5, 2, 1, 3, 4]), Vecsmall([5, 2, 1, 4, 3]), Vec
+small([5, 2, 3, 1, 4]), Vecsmall([5, 2, 3, 4, 1]), Vecsmall([5, 2, 4, 1, 3])
+, Vecsmall([5, 2, 4, 3, 1]), Vecsmall([5, 3, 1, 2, 4]), Vecsmall([5, 3, 1, 4
+, 2]), Vecsmall([5, 3, 2, 1, 4]), Vecsmall([5, 3, 2, 4, 1]), Vecsmall([5, 3,
+ 4, 1, 2]), Vecsmall([5, 3, 4, 2, 1]), Vecsmall([5, 4, 1, 2, 3]), Vecsmall([
+5, 4, 1, 3, 2]), Vecsmall([5, 4, 2, 1, 3]), Vecsmall([5, 4, 2, 3, 1]), Vecsm
+all([5, 4, 3, 1, 2]), Vecsmall([5, 4, 3, 2, 1])]
 [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 2
 1, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 4
 0, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 5
@@ -46,10 +62,10 @@
 7, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 
 113, 114, 115, 116, 117, 118, 119]
 0
-["e_TYPE", "permtonum", [1, 3, 0]]
+["e_TYPE", "permsign", Vecsmall([1, 3, 0])]
   ***   at top-level: permtonum(1)
   ***                 ^------------
   *** permtonum: incorrect type in permtonum (t_INT).
 0
-[]
-Total time spent: 4
+Vecsmall([])
+Total time spent: 3
