@@ -71,7 +71,7 @@ x + 1
 1 - x + x^2 - x^3 + x^4 - x^5 + x^6 - x^7 + x^8 - x^9 + x^10 - x^11 + x^12 -
  x^13 + x^14 - x^15 + x^16 - x^17 + x^18 - x^19 + O(x^20)
 ? numtoperm(7,1035)
-[2, 4, 6, 1, 5, 7, 3]
+Vecsmall([2, 4, 6, 1, 5, 7, 3])
 ? permtonum([4,7,1,6,3,5,2])
 2781
 ? 37.
@@ -123,4 +123,4 @@ O(x^12)
 ? (1+I)*(1+1/2*I)
 1/2 + 3/2*I
 ? print("Total time spent: ",gettime);
-Total time spent: 2
+Total time spent: 1
